# URL-shortener

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  sqlc.yaml
backend/alembic/: env.py
backend/alembic/versions/: 943f209dacb1_add_user_sessions.py  b088a7e6c219_added_extension_for_sort_optimizing.py  c266c0f3570d_convert_ids_to_uuid_v7.py  ce25199bf20b_add_clicks_count_to_links.py  ebbc9e14bca9_remove_user_sessions_table.py  fcf056d440c8_init_db.py
backend/scripts/: flush_db.py  seed_data.py
backend/sql/: schema.sql
backend/sql/queries/: click_queries.sql  jwt_queries.sql  link_queries.sql  user_queries.sql  user_quieries.sql
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/endpoints/: auth.py
backend/src/api/v1/: auth.py  clicks.py  links.py  redirect.py
backend/src/auth/: hashing.py  schemas.py  security.py
backend/src/core/: config.py  logger.py
backend/src/core/exceptions/: app_exceptions.py  service_exceptions.py
backend/src/db/: database.py  link_queries.py  models.py  queries.py  redis.py  user_quieries.py
backend/src/db/models/: __init__.py  click_queries_queries.py  link_queries_queries.py  public.py
backend/src/schemas/: clicks.py  links.py
backend/src/services/: analytics.py  links.py  session_manager.py  shortener.py
backend/tests/: conftest.py
backend/tests/api/: test_link.py
backend/tests/api/auth/: test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py
backend/tests/api/clicks/: test_get_clicks_history.py  test_get_link_stats.py
backend/tests/api/links/: test_create_link.py  test_delete_link.py  test_generate_qr.py  test_list_my_links.py
backend/tests/api/redirect/: test_redirect_to_full_url.py
backend/tests/integration/: test_full_cycle_logic.py
backend/tests/unit/: test_analytics.py  test_generator.py  test_link_service.py  test_session_manager.py
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  (+4 more)
(+60 files in other folders)
