[project]
name = "url-shortener"
version = "0.1.0"
description = "root workspace"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "backend",
    "sqlalchemy>=2.0.48",
    "sqlc>=1.30.0.post18",
]

[tool.uv.workspace]
members = ["backend"]

[tool.uv.sources]
backend = { editable = true, workspace = true }
